--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.20",
     "@mendable/firecrawl-js": "^1.24.0",
+    "ai": "^4.3.10",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
